# realtime

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  azure-pipelines-1.yml  azure-pipelines-2.yml  azure-pipelines.yml  build.js  build.sh  bun.lockb  devbox.json  melange.yaml  package.json  pixi.toml  process-compose.yml  pyproject.toml  requirements.txt  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: app-AutoDeployTrigger-6cd9c627-8ea7-439b-bf03-dd94e06bf949.yml  container-app-r7jmryyusby7e-AutoDeployTrigger-031a1a0b-d986-41d5-8fea-b41523ac9636.yml
components/: Api.svelte  BigClock.svelte  Clock.svelte  Input.svelte  index.js
src/: style.css
static/: bundle.css  bundle.js  style.css
templates/: header.html  index.html  news.html
