[tool.poetry]
name = "realtime"
version = "0.1.0"
description = ""
authors = ["V <veronika.m.winters@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask-socketio = "^5.3.6"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
