[tool.poetry]
name = "realtime"
version = "0.1.0"
description = ""
authors = ["V <nandithebull@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
watchdog = "^3.0.0"
flask-socketio = "^5.3.6"
flask = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
